--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,135 @@
+absl-py==0.7.1
+apturl==0.5.2
+asn1crypto==0.24.0
+astor==0.7.1
+astroid==2.0.4
+attrs==17.4.0
+Automat==0.6.0
+autopep8==1.4.2
+binwalk==2.1.1
+Brlapi==0.6.6
+certifi==2018.1.18
+chardet==3.0.4
+chrome-gnome-shell==0.0.0
+click==6.7
+cloudpickle==0.6.1
+colorama==0.3.7
+command-not-found==0.3
+constantly==15.1.0
+cryptography==2.1.4
+csirtg-domainsml==0.0.0a6
+# Editable install with no version control (csirtg-urlsml==0.0.0a5)
+-e /home/yusufalper/Downloads/csirtg-urlsml-py-master
+cupshelpers==1.0
+cycler==0.10.0
+dask==1.0.0
+decorator==4.3.0
+defer==1.0.6
+distro-info===0.18ubuntu0.18.04.1
+dlib==19.16.0
+docopt==0.6.2
+editdistance==0.5.3
+gast==0.2.2
+grpcio==1.19.0
+h5py==2.9.0
+httplib2==0.9.2
+hyperlink==17.3.1
+idna==2.6
 imutils==0.5.2
-numpy==1.13.3
-scipy==0.19.1
+incremental==16.10.1
+isort==4.3.4
 Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+lazy-object-proxy==1.3.1
+louis==3.5.0
+macaroonbakery==1.1.3
+Mako==1.0.7
+Markdown==3.1
+MarkupSafe==1.0
+matplotlib==2.1.1
+mccabe==0.6.1
+mock==2.0.0
+netifaces==0.10.4
+networkx==2.2
+numpy==1.16.2
+oauth==1.0.1
+olefile==0.45.1
+opencv-contrib-python==3.4.4.19
+opencv-python==4.0.0.21
+PAM==0.4.2
 pandas==0.23.4
-opencv_contrib_python==3.4.4.19
+pbr==5.1.3
+pexpect==4.2.1
+Pillow==5.1.0
+pipreqs==0.4.9
+protobuf==3.7.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycairo==1.16.2
+pycodestyle==2.4.0
+pycrypto==2.6.1
+pycups==1.9.73
+pygobject==3.26.1
+pylint==2.1.1
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+PyOpenGL==3.1.0
+pyOpenSSL==17.5.0
+pyparsing==2.2.0
+pyqtgraph==0.10.0
+pyRFC3339==1.0
+pyserial==3.4
+python-apt==1.6.3+ubuntu1
+python-dateutil==2.6.1
+python-debian==0.1.32
+pytz==2018.3
+PyWavelets==1.0.1
+pyxattr==0.6.0
+pyxdg==0.25
+PyYAML==3.12
+reportlab==3.4.0
+requests==2.18.4
+requests-unixsocket==0.1.5
+scikit-image==0.14.1
+scikit-learn==0.19.2
+scipy==1.0.1
+SecretStorage==2.3.1
+service-identity==16.0.0
+simplejson==3.13.2
+six==1.12.0
+sklearn==0.0
+ssh-import-id==5.7
+stevedore==1.30.0
+system-service==0.3
+systemd-python==234
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+tflearn==0.3.2
+toolz==0.9.0
+Twisted==17.9.0
+typed-ast==1.1.0
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.22
+usb-creator==0.3.3
+vboxapi==1.0
+virtualenv==16.1.0
+virtualenv-clone==0.4.0
+virtualenvwrapper==4.8.2
+wadllib==1.3.2
+Werkzeug==0.14.1
+wrapt==1.10.11
+xkit==0.0.0
+yarg==0.1.9
+youtube-dl==2018.3.14
+zope.interface==4.3.2
